# streamlit-ml-app

./: .gitignore  README.md  app.py  pyproject.toml  train_model.py
pages/: page1.py  page2.py  page3.py  page4.py
