[project]
name = "streamlit-eda-app"
version = "0.1.0"
description = "EDA & Data Visualization App using Streamlit"
authors = [
    {name = "xxxx",email = "xxxx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "shap"
]

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.0,<7.0.0"
pytest = ">=8.3.4,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
